# typelib

./: .gitignore  CMakeLists.txt
bindings/ruby/ext/: functions.cc  memory.cc  registry.cc  strings.cc  value.cc
bindings/ruby/lib/: typelib.rb
cmake/: FindAntlr.cmake  FindRuby.cmake
lang/cimport/: CMakeLists.txt
test/: CMakeLists.txt
tools/: CMakeLists.txt  cimportplugin.cc  import.cc  preprocess.cc  tlbimportplugin.cc
typelib/: CMakeLists.txt  pluginmanager.cc
